<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraint_payment_root"
    android:layout_marginVertical="2dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_options"
        android:layout_width="130dp"
        android:layout_height="@dimen/icon_norm_size"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/secondary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"
        >

        <ImageView
            android:id="@+id/image_edit"
            android:background="@drawable/circular_background"
            android:backgroundTint="@color/background_dark"
            android:contentDescription="@string/content_description_button_to_edit_a_payment"
            android:layout_width="@dimen/icon_min_size"
            android:layout_height="@dimen/icon_min_size"
            android:alpha="0.06"
            android:src="@drawable/ic_edit"
            android:padding="5dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toLeftOf="@id/image_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="false"
            />


        <ImageView
            android:id="@+id/image_delete"
            android:background="@drawable/circular_background"
            android:backgroundTint="#BD746D"
            android:contentDescription="@string/content_description_button_to_delete_a_payment"
            android:layout_width="@dimen/icon_min_size"
            android:layout_height="@dimen/icon_min_size"
            android:alpha="0.06"
            android:src="@drawable/ic_delete"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="false"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_payment_info"
        android:background="@drawable/round_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:id="@+id/image_type_payment"
            android:layout_width="@dimen/icon_norm_size"
            android:layout_height="@dimen/icon_norm_size"
            android:contentDescription="@string/content_description_icon_of_payment_type"
            android:background="@drawable/circular_background"
            android:backgroundTint="@color/background_dark"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_payment_credit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_payment_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxWidth="190dp"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/image_type_payment"
            app:layout_constraintLeft_toRightOf="@id/image_type_payment"
            app:layout_constraintTop_toTopOf="@id/image_type_payment"
            app:layout_constraintRight_toLeftOf="@id/text_payment_total"
            tools:text="Payment forasdasd" />

        <TextView
            android:id="@+id/text_payment_total"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@id/text_payment_date"
            app:layout_constraintBottom_toBottomOf="@+id/text_payment_description"
            app:layout_constraintTop_toTopOf="@+id/text_payment_description"
            tools:text="$869.24" />

        <TextView
            android:id="@+id/text_payment_date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="@+id/text_payment_total"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_payment_total"
            tools:text="10 months ago"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>